# 42sh

./: .editorconfig  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Makefile  README.md  auteur  norm.sh  pipe.c  sh  test.sh  toto.sh  valgrind.sh  valgrind.supp
include/: minishell.h  msh.h  ush.h
include/msh/: bi.h  edit.h  env.h  err.h  eval.h  exe.h  hist.h  history.h  job.h  keys.h  lex.h  proc.h  read.h  reduce.h  screen.h  sh.h  shell.h  sig.h  tc.h  tokenize.h  toks.h  var.h
include/ush/: alias.h  bi.h  env.h  err.h  eval.h  exp.h  func.h  glob.h  job.h  lex.h  parse.h  pool.h  proc.h  ps.h  redir.h  shell.h  syn.h  tok.h  var.h  vm.h  word.h
libft/: CMakeLists.txt  Makefile
libft/include/: libft.h
libft/include/libft/: cmd.h  ds.h  ex.h  exe.h  fs.h  io.h  lex.h  lib.h  math.h  mlx.h  rline.h  str.h  term.h  trm.h  tys.h
libft/include/libft/ds/: deq.h  dstr.h  lst.h  vec.h
libft/include/libft/io/: ifstream.h  imstream.h  istream.h  ofstream.h  omstream.h  ostream.h
libft/include/libft/lex/: lexer.h  src.h  tok.h  tokv.h
libft/include/libft/mlx/: hook.h  img.h  mlx.h  win.h
libft/src/cmd/: ft_job.c  ft_job_ctor.c  ft_job_ctor_exe.c  ft_job_dtor.c  ft_job_run.c  ft_worker_run.c
libft/src/cty/: ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_islower.c  ft_isprint.c  ft_isspace.c  ft_isupper.c  ft_tolower.c  ft_toupper.c
libft/src/ds/: ft_di_begin.c  ft_di_clean.c  ft_di_ctor.c  ft_di_dtor.c  ft_di_pop.c  ft_di_popn.c  ft_di_push.c  ft_di_pushn.c  ft_di_pushnc.c  ft_di_put.c  ft_di_putc.c  ft_di_realloc.c  ft_di_remove.c  ft_di_removen.c  ft_di_size.c  ft_di_unshift.c  ft_di_unshiftc.c  ft_di_unshiftn.c  ft_di_unshiftnc.c  ft_dstr_append.c  ft_dstr_at.c  ft_dstr_begin.c  ft_dstr_dtor.c  ft_dstr_emplace.c  ft_dstr_end.c  ft_dstr_ensure.c  ft_dstr_grow.c  ft_dstr_prepend.c  ft_dstr_pushc.c  ft_dstr_put.c  ft_dstr_putn.c  ft_dstr_removen.c  ft_dstr_shift.c  ft_dstr_shiftn.c  ft_dstr_unshift.c  ft_dstr_unshiftn.c  ft_du_at.c  ft_du_begin.c  ft_du_clean.c  ft_du_clear.c  (+52 more)
libft/src/ex/: ft_ex.c  ft_ex_throw.c
libft/src/exe/: ft_job.c  ft_job_ctor.c  ft_job_ctor_exe.c  ft_job_dtor.c  ft_job_exe.c  ft_job_run.c  ft_worker.c  ft_worker_run.c
libft/src/fs/: ft_pathjoin.c  ft_pathreal.c
libft/src/int/: ft_intlen.c  ft_intstr.c
libft/src/io/: ft_cin_read.c  ft_cin_seek.c  ft_cout_seek.c  ft_cout_write.c  ft_ifstream.c  ft_ifstream_peek.c  ft_ifstream_read.c  ft_ifstream_seek.c  ft_imstream.c  ft_imstream_peek.c  ft_imstream_read.c  ft_imstream_seek.c  ft_istream.c  ft_istream_peek.c  ft_istream_read.c  ft_istream_seek.c  ft_ofstream.c  ft_ofstream_put.c  ft_ofstream_seek.c  ft_ofstream_write.c  ft_omstream.c  ft_omstream_put.c  ft_omstream_seek.c  ft_omstream_write.c  ft_ostream.c  ft_ostream_put.c  ft_ostream_seek.c  ft_ostream_write.c  ft_putc.c  ft_putf.c  ft_putn.c  ft_puts.c
libft/src/lex/: lexer.c  lexer_peek.c  lexer_scan.c  lexer_src.c  private.h  src.c  src_peek.c  tok.c  tok_peek.c  tokv_dtor.c  tokv_init2.c
libft/src/lib/: ft_atoi.c  ft_clean.c  ft_dtor.c  ft_getenv.c  ft_itoa.c  ft_join.c  ft_strerr.c
libft/src/math/: ft_imin.c  ft_m4.c  ft_m4_mul.c  ft_v3_nor.c
libft/src/mem/: ft_alloc.c  ft_calloc.c  ft_malloc.c  ft_realloc.c
libft/src/mlx/: ft_img.c  ft_img_wli.c  ft_mlx.c  ft_win.c
libft/src/str/: ft_bzero.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memrcpy.c  ft_memset.c  ft_str_2.c  ft_str_3.c  ft_strbegw.c  ft_strcat.c  ft_strchr.c  ft_strclr.c  ft_strcmp.c  ft_strcpy.c  ft_strdup.c  ft_strlcat.c  ft_strlcpy.c  ft_strlen.c  ft_strnbr.c  ft_strncat.c  ft_strncmp.c  ft_strncpy.c  ft_strnlen.c  ft_strnstr.c  ft_strrchr.c  ft_strsplit.c  ft_strstr.c  ft_strword.c
libft/src/term/: ft_readline.c  ft_term.c
libft/src/trm/: ft_caps.c  ft_trm.c  ft_trm_keys.c  ft_trm_on.c
src/: alias.c  bi.c  bi_cd.c  bi_echo.c  bi_env.c  bi_exit.c  bi_setenv.c  bi_unsetenv.c  cli.c  comp.c  edit.c  env.c  err.c  eval.c  exe.c  exec.c  exp.c  func.c  hist.c  history.c  init.c  job.c  keys.c  lex.c  lex_syntax.c  lex_word.c  main.c  msh.c  parse.c  path.c  pool.c  proc.c  prompt.c  read.c  redir.c  reduce.c  rl.c  screen.c  sh.c  shell.c  (+8 more)
src/bi/: alias.c  bg.c  bi_cd.c  bi_echo.c  bi_setenv.c  cd.c  echo.c  env.c  exit.c  export.c  fg.c  history.c  jobs.c  read.c  set.c  setenv.c  unset.c  unsetenv.c
src/edit/: caps.c  ins.c  move.c  print.c  return.c
src/eval/: alias.c  ampr.c  andor.c  argv.c  assign.c  backquote.c  bi.c  bracegrp.c  cmd.c  cmp.c  command.c  compound.c  exe.c  forclause.c  func.c  heredoc.c  ifclause.c  lamp.c  list.c  operator.c  pipe.c  pipeline.c  ramp.c  raout.c  redir.c  redir_1.c  rin.c  rout.c  sep.c  simple.c  subshell.c  untilclause.c  whileclause.c  word.c
src/exp/: arith.c  backslash.c  backtick.c  brace.c  comm.c  dollars.c  glob.c  param.c  quote.c  tidle.c  tilde.c
src/glob/: glob.c
src/job/: bg.c  cont.c  control.c  debug.c  fg.c  launch.c  mark.c  pipe.c  state.c  wait.c
src/keys/: backspace.c  delete.c  down.c  left.c  return.c  right.c  up.c
src/lex/: check.c  dollar.c  heredoc.c  line.c  next.c  op.c  quote.c  reduce.c  skip.c  syn.c  tok.c  utils.c  var.c  word.c
src/parse/: andor.c  command.c  list.c  pipeline.c
src/pool/: mark.c  notify.c
src/proc/: bit.c  boolean.c  cnf.c  err.c  exe.c  fn.c  fork.c  launch.c  mark.c  none.c  sh.c
src/ps/: pool.h  ps.h
src/read/: notty.c  tty.c
src/reduce/: heredoc.c
src/syn/: andor.c  cmd.c  compound.c  forclause.c  funcdef.c  ifclause.c  list.c  pipe.c  redir.c  term.c  whileclause.c
src/tok/: expand.c
src/var/: expand.c  (+1 more)
test/: andor.sh  arith.sh  backquote.sh  bi.ex  bi.sh  bigin_01.sh  bigin_02.sh  bigin_relou.sh  boolean.sh  bug1.sh  bug10.sh  bug2.sh  bug3.sh  builtin_env.sh  buitin.sh  cd.sh  cmd.ex  cmd.sh  echo.sh  env.sh  env_maconly.sh  error_01.ex  error_01.sh  error_02.ex  error_02.sh  error_03.ex  error_03.sh  error_04.ex  error_04.sh  error_05.ex  error_05.sh  error_06.ex  error_06.sh  error_07.ex  error_07.sh  error_08.ex  error_08.sh  error_09.ex  error_09.sh  error_10.ex  (+29 more)
(+317 files in other folders)
